--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,3 +1,8 @@
-<p>
-  messages works!
-</p>
+<div id="messages">
+  <div class="alert alert-success alert-dismissable" role="alert">
+    {{messages[0]}}
+    <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>-->
+  </div>
+</div>
