Game Logic/UI Fleshed out a little. PlayedQuotes conditionally shows user and button to pick if you're the dealer. Picked quote is highlighted. Polished myQuotes to show if they are pickable.

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -1,8 +1,10 @@
-li.quote{
-    cursor: pointer;
-    color:blue;
+.my-quotes{
+    cursor:not-allowed;
 }
-li.quote:hover{
-    background-color: grey;
+.my-quotes .enabled{
+    cursor: pointer;
+}
+.my-quotes .enabled:hover{
+    background-color: darkgrey;
     color:green;
 }
