Client Server Quote Submitting Added bodyparser to dependencies Changed submitquote on client to send to server Added api call for receiving quote on server.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -41,7 +41,11 @@
 
     <!--picture-->
     <div class="card"> 
-      <img class="card-img" [src]="model.picture.url" [alt]="model.picture.name" />
+      <img 
+        class="card-img"
+        *ngIf="model.picture" 
+        [src]="model.picture.url" 
+        [alt]="model.picture.name" />
       <div class="card-img-overlay" style="text-align:center">
         <button 
           
