Better Client-Server Quote Request Modified quotes api get call to return only one quote if player exists, otherwise 7 and add. Also refactored some field names on client to reflect server models.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -63,7 +63,7 @@
       </div>
       <div class="card-body">
         <ul class="list-group">
-          <li *ngFor="let user of model.players" class="list-group-item">{{user.name}}</li>
+          <li *ngFor="let user of model.players" class="list-group-item">{{user.PlayerName}}</li>
         </ul>
       </div>
     </div>
